Resolved the user title link stuck issue

--- a/static/style.css
+++ b/static/style.css
@@ -67,6 +67,12 @@ h6 {
   }
 }
 
+#usernamelink{
+  text-decoration: none;
+  font-weight: bold;
+  pointer-events: none;
+}
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
